--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,7 @@
 @import "blocks/main/mitoshi.less";
 @import "blocks/main/about.less";
 @import "blocks/main/sale.less";
+@import "blocks/main/challenge.less";
 @import "blocks/footer/footer.less";
 
 
