--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,6 +8,7 @@
 @import "blocks/main/about.less";
 @import "blocks/main/sale.less";
 @import "blocks/main/challenge.less";
+@import "blocks/main/solution.less";
 @import "blocks/footer/footer.less";
 
 
