add html tags and basic styles for how section

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -9,6 +9,7 @@
 @import "blocks/main/sale.less";
 @import "blocks/main/challenge.less";
 @import "blocks/main/solution.less";
+@import "blocks/main/how.less";
 @import "blocks/footer/footer.less";
 
 
