--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,6 +10,7 @@
 @import "blocks/main/challenge.less";
 @import "blocks/main/solution.less";
 @import "blocks/main/how.less";
+@import "blocks/main/roadmap.less";
 @import "blocks/footer/footer.less";
 
 
