--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,7 @@
 @import "blocks/main/solution.less";
 @import "blocks/main/how.less";
 @import "blocks/main/roadmap.less";
+@import "blocks/main/team.less";
 @import "blocks/footer/footer.less";
 
 
