--- a/source/less/style.less
+++ b/source/less/style.less
@@ -12,6 +12,7 @@
 @import "blocks/main/how.less";
 @import "blocks/main/roadmap.less";
 @import "blocks/main/team.less";
+@import "blocks/main/contacts.less";
 @import "blocks/footer/footer.less";
 
 
