--- a/source/less/blocks/header/header.less
+++ b/source/less/blocks/header/header.less
@@ -1,16 +1,17 @@
 .header__wrapper {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   align-items: center;
-  max-width: 1170px;
-  margin: 0 auto;
+  width: 1170px;
   padding: 0 15px;
-  padding-top: 58px;
-  padding-bottom: 51px;
+  padding-top: 20px;
 }
 
 .header__logo {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 80px;
   height: 80px;
@@ -26,11 +27,4 @@
   background: #ffffff;
   border: 1px solid #ffc700;
   border-radius: 100px;
-}
-
-@media (max-height: 900px) {
-  .header__wrapper {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
 }
