--- a/source/less/blocks/main/mitoshi.less
+++ b/source/less/blocks/main/mitoshi.less
@@ -1,10 +1,10 @@
 .mitoshi {
-  padding-top: 97px;
-}
-
-.mitoshi__title {
-  margin: 0;
-  margin-bottom: 30px;
+  padding-top: 250px;
+  padding-bottom: 300px;
+  background-image: url(../images/main-bg-bottom.png);
+  background-repeat: no-repeat;
+  background-position: 27% bottom;
+  background-size: auto;
 }
 
 .mitoshi__desc {
@@ -64,4 +64,53 @@
   background-image: url(../images/telegram.png);
   background-repeat: no-repeat;
   background-size: contain;
+}
+
+@media (max-height: 1000px) {
+  .mitoshi {
+    padding-top: 220px;
+    padding-bottom: 260px;
+  }
+}
+
+@media (max-height: 950px) {
+  .mitoshi {
+    padding-top: 200px;
+    padding-bottom: 220px;
+  }
+}
+
+@media (max-height: 900px) {
+  .mitoshi {
+    padding-top: 180px;
+    padding-bottom: 210px;
+  }
+}
+
+@media (max-height: 850px) {
+  .mitoshi {
+    padding-top: 150px;
+    padding-bottom: 180px;
+  }
+}
+
+@media (max-height: 800px) {
+  .mitoshi {
+    padding-top: 130px;
+    padding-bottom: 160px;
+  }
+}
+
+@media (max-height: 750px) {
+  .mitoshi {
+    padding-top: 110px;
+    padding-bottom: 140px;
+  }
+}
+
+@media (max-height: 700px) {
+  .mitoshi {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
