--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -17,6 +17,10 @@ body {
   background-color: #ffffff;
 }
 
+section {
+  padding-bottom: 100px;
+}
+
 a {
   text-decoration: none;
 }
@@ -25,7 +29,11 @@ img {
   max-width: 100%;
   height: auto;
 }
+
 h2 {
+  margin: 0;
+  margin-bottom: 30px;
+  padding-top: 30px;
   font-family: 'Crimson Text', 'Times New Roman', serif;
   font-size: 50px;
   line-height: 64px;
@@ -44,4 +52,31 @@ input[type="radio"].visually-hidden {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+
+@media (max-width: 991px) {
+  section {
+    padding-bottom: 80px;
+  }
+
+  h2 {
+    margin-bottom: 25px;
+    padding-top: 25px;
+    font-size: 42px;
+    line-height: 54px;
+  }
+}
+
+@media (max-width: 767px) {
+  section {
+    padding-bottom: 60px;
+  }
+
+  h2 {
+    margin-bottom: 20px;
+    padding-top: 20px;
+    font-size: 35px;
+    line-height: 45px;
+  }
 }
