add responsive styles for how section and make picture framing

--- a/source/less/blocks/main/team.less
+++ b/source/less/blocks/main/team.less
@@ -64,8 +64,12 @@
 @media (max-width: 767px) {
   .team__list {
     &--team {
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
+  }
+
+  .team__list-item {
+    margin-bottom: 10px;
   }
 
   .team__img-wrap {
