--- a/source/less/blocks/main/how.less
+++ b/source/less/blocks/main/how.less
@@ -1,17 +1,15 @@
 .how {
-  max-height: 1000px;
   display: flex;
 }
 
 .how__img-wrap {
-  max-width: 340px;
-  max-height: 731px;
   flex-shrink: 0;
+  margin-left: -90px;
+  margin-right: 40px;
 }
 
 .how__title {
-  margin: 0;
-  margin-bottom: 40px;
+  padding-top: 0;
 }
 
 .how__list {
@@ -40,7 +38,8 @@
 }
 
 .how__button {
-  margin-top: 30px;font-family: 'Rubik', 'Arial', sans-serif;
+  margin-top: 30px;
+  font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
   padding: 12px 26px 10px;
   line-height: 18px;
@@ -50,4 +49,68 @@
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
 
+}
+
+
+@media (max-width: 1366px) {
+  .how__img-wrap {
+    margin-left: -60px;
+  }
+}
+
+@media (max-width: 991px) {
+  .how__img-wrap {
+    margin-left: -30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .how {
+    align-items: center;
+  }
+
+  .how__item {
+    margin-bottom: 30px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .how__img-wrap {
+    margin-right: 20px;
+  }
+
+  .how__button {
+    padding: 12px 14px 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .how__item {
+    margin-bottom: 20px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .how__img-wrap {
+    display: none;
+  }
+
+  .how__title {
+    padding-top: 20px;
+  }
+
+  .how__subtitle {
+    margin-bottom: 7px;
+  }
+
+  .how__button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 290px;
+  }
 }
