add responsive styles for contacts section

--- a/source/less/blocks/main/contacts.less
+++ b/source/less/blocks/main/contacts.less
@@ -1,10 +1,13 @@
-.contacts__title {
-  margin: 0;
-  margin-bottom: 57px;
+.contacts {
+  padding-bottom: 200px;
 }
 
 .contacts__group {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .contacts__subtitle {
@@ -18,10 +21,15 @@
   margin: 0;
   margin-bottom: 18px;
   line-height: 18px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 .contacts__list {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -75,4 +83,44 @@
   border: none;
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
+}
+
+@media (max-width: 991px) {
+  .contacts {
+    padding-bottom: 150px;
+  }
+
+  .contacts__group {
+    margin-bottom: 25px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .contacts__text {
+    margin-bottom: 15px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .contacts {
+    max-width: 600px;
+  }
+
+  .contacts__list-item {
+    margin-right: 15px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+
+  .contacts__text br {
+    display: none;
+  }
 }
