add responsive styles to solution section

--- a/source/less/blocks/main/mitoshi.less
+++ b/source/less/blocks/main/mitoshi.less
@@ -61,7 +61,7 @@
   transform: translateY(-50%);
   width: 24px;
   height: 20px;
-  background-image: url(../images/telegram.png);
+  background-image: url(../images/telegram.svg);
   background-repeat: no-repeat;
   background-size: contain;
 }
