--- a/source/less/blocks/main/solution.less
+++ b/source/less/blocks/main/solution.less
@@ -1,6 +1,9 @@
-.solution__title {
-  margin: 0;
-  margin-bottom: 39px;
+.solution {
+  background-image: url(../images/solution-bg-1.png);
+  background-repeat: no-repeat;
+  //background-position: 170% -110px;
+  background-position: 100% 0;
+  background-size: auto;
 }
 
 .solution__wrapper {
@@ -24,7 +27,7 @@
 }
 
 .solution__button {
-  margin-top: 20px;
+  margin-top: 30px;
   font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
   padding: 12px 26px 10px;
@@ -34,4 +37,35 @@
   border: none;
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
+}
+
+@media (max-width: 1199px) {
+  //.solution {
+  //  background-position: 140% -20px;
+  //  background-size: 700px auto;
+  //}
+}
+
+@media (max-width: 991px) {
+  .solution {
+    //background-position: 170% -20px;
+  }
+
+  .solution__text {
+    margin-bottom: 25px;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  .solution__button {
+    margin-top: 25px;
+  }
+}
+
+@media (max-width: 767px) {
+  .solution {
+    background-image: none;
+  }
 }
