adв responsive styles to challenge section

--- a/source/less/blocks/main/solution.less
+++ b/source/less/blocks/main/solution.less
@@ -1,9 +1,8 @@
 .solution {
-  background-image: url(../images/solution-bg-1.png);
+  background-image: url(../images/solution-bg.png), url(../images/rect-bg.png);
   background-repeat: no-repeat;
-  //background-position: 170% -110px;
-  background-position: 100% 0;
-  background-size: auto;
+  background-position: 100% 0, 90% 0;
+  background-size: auto, auto;
 }
 
 .solution__wrapper {
@@ -39,18 +38,7 @@
   box-shadow: 0 0 20px #ffffff;
 }
 
-@media (max-width: 1199px) {
-  //.solution {
-  //  background-position: 140% -20px;
-  //  background-size: 700px auto;
-  //}
-}
-
 @media (max-width: 991px) {
-  .solution {
-    //background-position: 170% -20px;
-  }
-
   .solution__text {
     margin-bottom: 25px;
 
