--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Rubik:400,700');
-@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
+//@import url('https://fonts.googleapis.com/css?family=Rubik:400,700');
+//@import url('https://fonts.googleapis.com/css?family=Crimson+Text');
 
 html,
 body {
