--- a/source/less/blocks/main/sale.less
+++ b/source/less/blocks/main/sale.less
@@ -1,8 +1,3 @@
-.sale__title {
-  margin: 0;
-  margin-bottom: 30px;
-}
-
 .sale__text {
   margin: 0;
   margin-bottom: 25px;
@@ -18,7 +13,7 @@
 .sale__table-wrap {
   box-sizing: border-box;
   width: 470px;
-  margin-right: 52px;
+  margin-right: 50px;
   line-height: 17px;
   text-transform: capitalize;
   box-shadow: 0 0 30px rgba(0, 0, 0, 0.04);
@@ -77,12 +72,28 @@
 }
 
 .sale__circle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
   position: relative;
   width: 228px;
   height: 228px;
   margin-right: 40px;
   border-radius: 50%;
   box-shadow: 0 0 20px rgba(224, 224, 224, 0.36);
+
+  &--token {
+    background-image: url(../images/circle-token.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &--proceed {
+    background-image: url(../images/circle-proceed.png);
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 
   &::before {
     content: "";
@@ -141,4 +152,163 @@
 
 .sale__list-item--fifth::before {
   background-color: #d6f55c;
+}
+
+@media (max-width: 1199px) {
+  .sale__table-wrap {
+    margin-right: 40px;
+  }
+
+  .sale__circle {
+    width: 200px;
+    height: 200px;
+    margin-right: 20px;
+    background-size: 180px 180px;
+
+    &::before {
+      width: 110px;
+      height: 110px;
+    }
+  }
+
+  .sale__list-item {
+    margin-bottom: 15px;
+
+    &:last-of-type {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 991px) {
+  .sale__table-wrap {
+    max-width: 570px;
+    width: 100%;
+    align-self: center;
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+
+  .sale__table-data {
+    width: 50%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .sale__table-data--right {
+    width: 50%;
+    padding-right: 10px;
+  }
+
+  .sale__content {
+    flex-direction: column;
+  }
+
+  .sale__allocation {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .sale__graph-wrap {
+    align-items: flex-start;
+  }
+
+  .sale__graph {
+    width: 48%;
+  }
+
+  .sale__circle {
+    width: 150px;
+    height: 150px;
+    background-size: 130px 130px;
+
+    &::before {
+      width: 60px;
+      height: 60px;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  .sale__content {
+    margin-bottom: 40px;
+  }
+
+  .sale__allocation {
+    width: 80%;
+    flex-direction: column;
+    align-self: center;
+    flex-shrink: 0;
+    justify-content: flex-start;
+  }
+
+  .sale__graph-wrap {
+    margin-bottom: 20px;
+
+    &--proceed {
+      margin-bottom: 0;
+    }
+  }
+
+  .sale__graph {
+    width: auto;
+  }
+
+  .sale__graph-wrap {
+    align-items: center;
+  }
+
+  .sale__graph-wrap {
+    margin-bottom: 15px;
+  }
+
+  .sale__button-group {
+    width: 340px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .sale__button {
+    padding: 12px 14px 10px;
+  }
+}
+
+
+@media (max-width: 575px) {
+  .sale__content {
+    margin-bottom: 35px;
+  }
+  
+  .sale__table-data {
+    padding: 7px 10px;
+  }
+
+  .sale__allocation {
+    width: 100%;
+  }
+
+  .sale__graph-title {
+    margin-bottom: 12px;
+  }
+
+  .sale__circle {
+    margin-right: 15px;
+    width: 120px;
+    height: 120px;
+    background-size: 100px 100px;
+
+    &::before {
+      width: 30px;
+      height: 30px;
+    }
+  }
+
+  .sale__button-group {
+    width: 300px;
+  }
+
+  .sale__button {
+    padding: 7px;
+  }
 }
