--- a/source/less/blocks/main/about.less
+++ b/source/less/blocks/main/about.less
@@ -1,17 +1,17 @@
-.about__title {
-  margin: 0;
-  margin-bottom: 42px;
-  padding-top: 19px;
-}
-
 .about__group {
   display: flex;
 }
 
 .about__video-wrap {
+  flex-shrink: 0;
   width: 512px;
   height: 286px;
   margin-right: 50px;
+}
+
+.about__video-wrap iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .about__desc {
@@ -34,6 +34,7 @@
 }
 
 .about__button {
+  display: inline-block;
   font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
   padding: 12px 26px 10px;
@@ -42,4 +43,42 @@
   background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
+}
+
+@media (max-width: 991px) {
+  .about__video-wrap {
+    width: 350px;
+    height: 195px;
+    margin-right: 40px;
+  }
+}
+
+@media (max-width: 767px) {
+  .about__group {
+    flex-direction: column;
+  }
+
+  .about__video-wrap {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .about__text:not(.about__text--strong) {
+    margin-bottom: 20px;
+  }
+
+  .about__desc {
+    max-width: 700px;
+  }
+
+  .about__button {
+    padding: 12px 14px 10px;
+  }
+}
+
+@media (max-width: 575px) {
+  .about__video-wrap {
+    width: 290px;
+    height: 161px;
+  }
 }
