--- a/source/less/blocks/page-wrapper/page-wrapper.less
+++ b/source/less/blocks/page-wrapper/page-wrapper.less
@@ -47,3 +47,30 @@
     background-size: 680px auto, auto;
   }
 }
+
+@media (max-width: 1199px) {
+  .page-wrapper {
+    background-size: 680px auto, auto;
+  }
+}
+
+@media (max-width: 991px) {
+  .page-wrapper {
+    background-size: 600px auto, 150px auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .page-wrapper {
+    background-size: 480px auto, 120px auto;
+  }
+}
+
+@media (max-width: 575px) {
+  .page-wrapper {
+    background-image: url(../images/main-bg-right.png);
+    background-repeat: no-repeat;
+    background-position: top right;
+    background-size: 350px auto;
+  }
+}
