add responsive styles to roadmap section

--- a/source/less/blocks/main/how.less
+++ b/source/less/blocks/main/how.less
@@ -1,5 +1,9 @@
 .how {
   display: flex;
+  background-image: url(../images/rect-bg.png);
+  background-repeat: no-repeat;
+  background-position: 100% 0;
+  background-size: auto;
 }
 
 .how__img-wrap {
