add responsive styles and page's bottom background-image

--- a/source/less/blocks/main/mitoshi.less
+++ b/source/less/blocks/main/mitoshi.less
@@ -1,7 +1,7 @@
 .mitoshi {
   padding-top: 250px;
   padding-bottom: 300px;
-  background-image: url(../images/main-bg-bottom.png);
+  background-image: url(../images/mitoshi-bg-bottom.png);
   background-repeat: no-repeat;
   background-position: 27% bottom;
   background-size: auto;
