--- a/source/less/blocks/header/header.less
+++ b/source/less/blocks/header/header.less
@@ -1,13 +1,16 @@
-.header__wrapper {
+.header {
+  z-index: 100;
   position: fixed;
-  top: 0;
   left: 50%;
   transform: translateX(-50%);
+  max-width: 1200px;
+  width: 100%;
+}
+
+.header__wrapper {
   display: flex;
   align-items: center;
-  width: 1170px;
   padding: 0 15px;
-  padding-top: 20px;
 }
 
 .header__logo {
@@ -16,6 +19,11 @@
   width: 80px;
   height: 80px;
   margin-right: auto;
+}
+
+.header__group {
+  display: flex;
+  align-items: center;
 }
 
 .header__button {
@@ -27,4 +35,60 @@
   background: #ffffff;
   border: 1px solid #ffc700;
   border-radius: 100px;
+}
+
+
+.header__toggle {
+  display: none;
+  width: 36px;
+  height: 36px;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  background-image: url(../images/open-menu.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  outline: none;
+  transition: all 0.2s ease;
+
+  &--active {
+    background-image: url(../images/close-menu.png);
+  }
+}
+
+@media (max-width: 1199px) {
+  .header {
+    background-color: #ffffff;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.03);
+  }
+
+  .header__toggle {
+    display: block;
+    position: absolute;
+    right: 15px;
+  }
+
+  .header__group {
+    box-sizing: border-box;
+    position: absolute;
+    top: 80px;
+    right: -100%;
+    width: 320px;
+    align-items: stretch;
+    flex-direction: column;
+    padding-left: 20px;
+    padding-bottom: 30px;
+    background-color: #ffffff;
+    box-shadow: -8px 9px 10px rgba(0, 0, 0, 0.02);
+    border-radius: 0 0 0 5px;
+    transition: all 0.2s;
+
+    &--active {
+      right: 0;
+    }
+  }
+
+  .header__button {
+    align-self: center;
+  }
 }
