--- a/source/less/blocks/header/main-nav.less
+++ b/source/less/blocks/header/main-nav.less
@@ -1,13 +1,11 @@
 .main-nav {
-  margin-left: 70px;
-  margin-right: 14px;
+  margin-right: 20px;
   font-size: 14px;
   line-height: 17px;
 }
+
 .main-nav__list {
   display: flex;
-  //width: 851px;
-  //justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
   padding: 0;
@@ -15,7 +13,7 @@
 }
 
 .main-nav__item {
-  margin-right: 25px;
+  margin-right: 22px;
 
   &:last-child {
     margin-right: 0;
@@ -44,4 +42,31 @@
 
 .main-nav__item--active a {
   color: #fbb41e;
+}
+
+@media (max-width: 1199px) {
+  .main-nav {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+
+  .main-nav__list {
+    flex-direction: column;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
+  .main-nav__item {
+    margin-right: 0;
+    padding: 7px 5px;
+    border-bottom: 1px solid rgba(223, 223, 223, 0.28);
+  }
+
+  .main-nav__item--active::before {
+      display: none;
+  }
+
+  .main-nav__item--active a {
+    color: #fbb41e;
+  }
 }
