--- a/source/less/blocks/main/roadmap.less
+++ b/source/less/blocks/main/roadmap.less
@@ -160,15 +160,43 @@
   }
 
   .roadmap__item {
-    width: 100%;
-    min-height: auto;
+    position: relative;
+    width: 290px;
+    min-height: 80px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-radius: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 
-    &:last-child {
-      margin-bottom: 0;
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -25px;
+      left: 50%;
+      transform: translateX(-50%);
+      height: 25px;
+      width: 15px;
+      background-color: #fbb41e;
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: -25px;
+      left: 55%;
+      transform: translateX(-50%);
+      height: 25px;
+      width: 10px;
+      background-color: transparent;
+      border-right: 1px dotted #fbb41e;
+    }
+  }
+
+  .roadmap__list--end .roadmap__item:last-child {
+    margin-bottom: 0;
+
+    &::after,
+    &::before {
+      display: none;
     }
   }
 }
