--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -18,7 +18,7 @@ body {
 }
 
 section {
-  padding-bottom: 100px;
+  padding-top: 100px;
 }
 
 a {
@@ -33,7 +33,7 @@ img {
 h2 {
   margin: 0;
   margin-bottom: 30px;
-  padding-top: 30px;
+  margin-top: 30px;
   font-family: 'Crimson Text', 'Times New Roman', serif;
   font-size: 50px;
   line-height: 64px;
@@ -57,12 +57,12 @@ input[type="radio"].visually-hidden {
 
 @media (max-width: 991px) {
   section {
-    padding-bottom: 80px;
+    padding-top: 80px;
   }
 
   h2 {
     margin-bottom: 25px;
-    padding-top: 25px;
+    margin-top: 25px;
     font-size: 42px;
     line-height: 54px;
   }
@@ -70,12 +70,12 @@ input[type="radio"].visually-hidden {
 
 @media (max-width: 767px) {
   section {
-    padding-bottom: 60px;
+    padding-top: 60px;
   }
 
   h2 {
     margin-bottom: 20px;
-    padding-top: 20px;
+   margin-top: 20px;
     font-size: 35px;
     line-height: 45px;
   }
