change general styles

--- a/source/less/blocks/main/how.less
+++ b/source/less/blocks/main/how.less
@@ -2,7 +2,7 @@
   display: flex;
   background-image: url(../images/rect-bg.png);
   background-repeat: no-repeat;
-  background-position: 100% 0;
+  background-position: 100% 30%;
   background-size: auto;
 }
 
