--- a/source/less/blocks/main/solution.less
+++ b/source/less/blocks/main/solution.less
@@ -1,7 +1,7 @@
 .solution {
   background-image: url(../images/solution-bg.png), url(../images/rect-bg.png);
   background-repeat: no-repeat;
-  background-position: 100% 0, 90% 0;
+  background-position: 100% 65%, 90% 100%;
   background-size: auto, auto;
 }
 
