--- a/source/less/blocks/main/mitoshi.less
+++ b/source/less/blocks/main/mitoshi.less
@@ -1,6 +1,6 @@
 .mitoshi {
   padding-top: 250px;
-  padding-bottom: 300px;
+  padding-bottom: 180px;
   background-image: url(../images/mitoshi-bg-bottom.png);
   background-repeat: no-repeat;
   background-position: 27% bottom;
@@ -70,61 +70,49 @@
 @media (max-height: 1000px) {
   .mitoshi {
     padding-top: 220px;
-    padding-bottom: 260px;
   }
 }
 
 @media (max-height: 950px) {
   .mitoshi {
     padding-top: 200px;
-    padding-bottom: 220px;
   }
 }
 
 @media (max-height: 900px) {
   .mitoshi {
     padding-top: 180px;
-    padding-bottom: 210px;
   }
 }
 
 @media (max-height: 850px) {
   .mitoshi {
     padding-top: 150px;
-    padding-bottom: 180px;
   }
 }
 
 @media (max-height: 800px) {
   .mitoshi {
     padding-top: 130px;
-    padding-bottom: 160px;
   }
 }
 
 @media (max-height: 750px) {
   .mitoshi {
     padding-top: 110px;
-    padding-bottom: 140px;
-  }
-}
-
-@media (max-height: 700px) {
-  .mitoshi {
-    padding-top: 100px;
-    padding-bottom: 100px;
   }
 }
 
 @media (max-width: 1199px) {
   .mitoshi {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 110px;
+    padding-bottom: 60px;
   }
 }
 
 @media (max-width: 991px) {
   .mitoshi {
+    background-position: 50% bottom;
     background-size: 200px auto;
   }
 
@@ -147,6 +135,7 @@
 
 @media (max-width: 575px) {
   .mitoshi {
+    padding-bottom: 0;
     background-image: none;
   }
 
