--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -18,7 +18,8 @@ body {
 }
 
 section {
-  padding-top: 100px;
+  padding-top: 80px;
+  padding-bottom: 20px;
 }
 
 a {
@@ -58,6 +59,7 @@ input[type="radio"].visually-hidden {
 @media (max-width: 991px) {
   section {
     padding-top: 80px;
+    padding-bottom: 0;
   }
 
   h2 {
