change sizes of footer and contacts links

--- a/source/less/blocks/footer/footer.less
+++ b/source/less/blocks/footer/footer.less
@@ -85,7 +85,32 @@
 
 @media (max-width: 991px) {
   .footer {
-    margin-top: 50px;
+    margin-top: 30px;
+  }
+
+  .footer__item {
+    width: 38px;
+    height: 38px;
+  }
+
+  .footer__item--telegram {
+    background-size: 42px 42px, auto;
+  }
+
+  .footer__item--whatsapp {
+    background-size: 27px 21px, auto;
+  }
+
+  .footer__item--facebook {
+    background-size: 44px 41px, auto;
+  }
+
+  .footer__item--lkdin {
+    background-size: 42px 42px, auto;
+  }
+
+  .footer__item--twitter {
+    background-size: 42px 42px, auto;
   }
 }
 
