--- a/source/less/blocks/main/contacts.less
+++ b/source/less/blocks/main/contacts.less
@@ -1,3 +1,7 @@
+.contacts {
+  padding-bottom: 50px;
+}
+
 .contacts__group {
   margin-bottom: 30px;
 
@@ -95,6 +99,15 @@
 
     &:last-child {
       margin-bottom: 0;
+    }
+  }
+
+  .contacts__list-item {
+    width: 38px;
+    height: 38px;
+
+    &--medium {
+      background-size: 26px 21px, auto;
     }
   }
 }
