add some additional styles: cursor-pointer, footeк and contacts links

--- a/source/less/blocks/footer/footer.less
+++ b/source/less/blocks/footer/footer.less
@@ -20,9 +20,13 @@
 }
 
 .footer__item {
+  margin-right: 26px;
+}
+
+.footer__item a {
+  display: block;
   width: 45px;
   height: 45px;
-  margin-right: 26px;
   border-radius: 50%;
   background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
 
@@ -31,37 +35,37 @@
   }
 }
 
-.footer__item--telegram {
+.footer__item--telegram a {
   background-image: url(../images/telegram.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.footer__item--whatsapp {
+.footer__item--whatsapp a {
   background-image: url(../images/whatsapp.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.footer__item--mail {
+.footer__item--mail a {
   background-image: url(../images/mail.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.footer__item--facebook {
+.footer__item--facebook a {
   background-image: url(../images/facebook.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.footer__item--lkdin {
+.footer__item--lkdin a {
   background-image: url(../images/lkdin.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.footer__item--twitter {
+.footer__item--twitter a {
   background-image: url(../images/twitter.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   background-repeat: no-repeat;
   background-position: center;
@@ -88,28 +92,28 @@
     margin-top: 30px;
   }
 
-  .footer__item {
+  .footer__item a {
     width: 38px;
     height: 38px;
   }
 
-  .footer__item--telegram {
+  .footer__item--telegram a {
     background-size: 42px 42px, auto;
   }
 
-  .footer__item--whatsapp {
-    background-size: 27px 21px, auto;
+  .footer__item--whatsapp a {
+    background-size: 27px 27px, auto;
   }
 
-  .footer__item--facebook {
+  .footer__item--facebook a {
     background-size: 44px 41px, auto;
   }
 
-  .footer__item--lkdin {
+  .footer__item--lkdin a {
     background-size: 42px 42px, auto;
   }
 
-  .footer__item--twitter {
+  .footer__item--twitter a {
     background-size: 42px 42px, auto;
   }
 }
