--- a/source/less/blocks/header/header.less
+++ b/source/less/blocks/header/header.less
@@ -42,6 +42,7 @@
   background: #ffffff;
   border: 1px solid #ffc700;
   border-radius: 100px;
+  cursor: pointer;
 }
 
 
@@ -56,6 +57,7 @@
   background-repeat: no-repeat;
   background-size: contain;
   outline: none;
+  cursor: pointer;
   transition: all 0.2s ease;
 
   &--active {
