remove capitilize styles

--- a/source/less/blocks/main/about.less
+++ b/source/less/blocks/main/about.less
@@ -20,7 +20,7 @@
 
 .about__text {
   margin: 0;
-  text-transform: capitalize;
+  //text-transform: capitalize;
 
   &--strong {
     margin-bottom: 5px;
