--- a/source/less/blocks/main/contacts.less
+++ b/source/less/blocks/main/contacts.less
@@ -45,6 +45,11 @@
   height: 45px;
   border-radius: 50%;
   background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  transition: all 0.1s;
+
+  &:hover {
+    box-shadow: 0 0 20px #ffc700;
+  }
 }
 
 .contacts__list-item--medium a {
@@ -88,6 +93,11 @@
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
   cursor: pointer;
+  transition: all 0.1s;
+
+  &:hover {
+    box-shadow: 0 0 20px #ffc700;
+  }
 }
 
 @media (max-width: 991px) {
