--- a/source/less/blocks/main/sale.less
+++ b/source/less/blocks/main/sale.less
@@ -42,6 +42,14 @@
   background: none;
   border-radius: 100px;
   cursor: pointer;
+  transition: box-shadow 0.1s;
+
+  &:hover {
+    background: linear-gradient(91.95deg, #ffc701 0.35%, #ffe13a 99.76%);
+    box-shadow: 0 0 20px #ffc700;
+    border: 1px solid transparent;
+    color: #ffffff;
+  }
 }
 
 .sale__allocation {
