--- a/source/less/blocks/header/header.less
+++ b/source/less/blocks/header/header.less
@@ -45,6 +45,11 @@
   cursor: pointer;
 }
 
+.header__button:hover {
+  box-shadow: 0 0 10px 2px #ffffff,
+              0 0 20px #ffc700;
+}
+
 
 .header__toggle {
   display: none;
