--- a/source/less/blocks/main/about.less
+++ b/source/less/blocks/main/about.less
@@ -20,7 +20,6 @@
 
 .about__text {
   margin: 0;
-  //text-transform: capitalize;
 
   &--strong {
     margin-bottom: 5px;
@@ -43,6 +42,11 @@
   background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
+  transition: all 0.1s;
+
+  &:hover {
+    box-shadow: 0 0 20px #ffc700;
+  }
 }
 
 @media (max-width: 991px) {
