--- a/source/less/blocks/main/how.less
+++ b/source/less/blocks/main/how.less
@@ -53,6 +53,11 @@
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
   cursor: pointer;
+  transition: all 0.1s;
+
+  &:hover {
+    box-shadow: 0 0 20px #ffc700;
+  }
 }
 
 
