--- a/source/less/blocks/main/solution.less
+++ b/source/less/blocks/main/solution.less
@@ -37,6 +37,11 @@
   border-radius: 100px;
   box-shadow: 0 0 20px #ffffff;
   cursor: pointer;
+  transition: all 0.1s;
+
+  &:hover {
+    box-shadow: 0 0 20px #ffc700;
+  }
 }
 
 @media (max-width: 991px) {
