--- a/source/less/blocks/main/solution.less
+++ b/source/less/blocks/main/solution.less
@@ -1,8 +1,8 @@
 .solution {
-  background-image: url(../images/solution-bg.png), url(../images/rect-bg.png);
+  background-image: url(../images/solution-bg.png);
   background-repeat: no-repeat;
-  background-position: 100% 65%, 90% 100%;
-  background-size: auto, auto;
+  background-position: 100% 65%;
+  background-size: auto;
 }
 
 .solution__wrapper {
