--- a/source/less/blocks/main/team.less
+++ b/source/less/blocks/main/team.less
@@ -58,15 +58,28 @@
 }
 
 .team__img-wrap {
+  position: relative;
   display: flex;
   margin-bottom: 16px;
   width: 182px;
   height: 182px;
   border-radius: 50%;
   overflow: hidden;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
   background-repeat: no-repeat;
   background-size: contain;
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 220, 25, 0.5);
+  }
+
+  img {
+    filter: grayscale(100%);
+  }
 }
 
 .team__member-name {
