--- a/source/less/blocks/footer/footer.less
+++ b/source/less/blocks/footer/footer.less
@@ -77,6 +77,12 @@
   background-position: center;
 }
 
+.footer__item--youtube a {
+  background-image: url(../images/youtube.svg), linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .footer__group {
   margin: 0;
   color: #000000;
