--- a/source/less/blocks/main/team.less
+++ b/source/less/blocks/main/team.less
@@ -38,10 +38,6 @@
   &--executive {
     justify-content: flex-start;
   }
-
-  //&--team {
-  //  margin-bottom: 70px;
-  //}
 }
 
 .team__list-item {
@@ -80,6 +76,16 @@
   img {
     filter: grayscale(100%);
   }
+}
+
+.team__img-wrap--partners {
+  justify-content: center;
+  align-items: center;
+  background-color: #000000;
+}
+
+.team__img-wrap--partners-shrink img {
+  width: 90%;
 }
 
 .team__member-name {
