--- a/source/less/blocks/main/how.less
+++ b/source/less/blocks/main/how.less
@@ -38,6 +38,7 @@
 }
 
 .how__button {
+  display: inline-block;
   margin-top: 30px;
   font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
