--- a/source/less/blocks/main/solution.less
+++ b/source/less/blocks/main/solution.less
@@ -26,6 +26,7 @@
 }
 
 .solution__button {
+  display: inline-block;
   margin-top: 30px;
   font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
