--- a/source/less/blocks/main/roadmap.less
+++ b/source/less/blocks/main/roadmap.less
@@ -33,7 +33,8 @@
   }
 
   &--center {
-    width: 620px;
+    flex-direction: row-reverse;
+    width: 720px;
     top: 480px;
     left: 50%;
     transform: translateX(-50%);
@@ -60,11 +61,40 @@
   border-radius: 100px;
 }
 
+.roadmap__list--start .roadmap__item {
+  &--medium {
+    width: 23%;
+  }
+
+  &--big {
+    width: 26%;
+  }
+}
+
+.roadmap__list--center .roadmap__item {
+  width: 30%;
+}
+
+.roadmap__list--end .roadmap__item {
+  &--little {
+    width: 19%;
+  }
+
+  &--medium {
+    width: 22%;
+  }
+
+  &--big {
+    width: 28.5%;
+  }
+}
+
 .roadmap__subtitle {
   margin: 0;
   margin-bottom: 5px;
-  font-size: 14px;
-  line-height: 17px;
+  font-size: 13px;
+  line-height: 15px;
+  text-align: center;
 }
 
 .roadmap__sublist {
@@ -77,6 +107,7 @@
 .roadmap__sublist-item {
   position: relative;
   padding-left: 10px;
+  font-size: 12px;
 
   &::before {
     content: "";
@@ -106,27 +137,57 @@
 
   .roadmap__list {
     &--start {
-      width: 700px;
+      width: 738px;
       top: 190px;
       left: 0;
     }
 
     &--center {
-      width: 460px;
+      width: 560px;
       top: 410px;
     }
 
     &--end {
-      width: 700px;
+      width: 738px;
       top: 650px;
     }
   }
 
   .roadmap__item {
-    width: 210px;
-    min-height: 110px;
-    border-radius: 90px;
+    min-height: 120px;
+    border-radius: 55px;
 
+    span {
+      display: block;
+    }
+  }
+
+  .roadmap__list--start .roadmap__item {
+    &--medium {
+      width: 24%;
+    }
+  }
+
+  .roadmap__list--end .roadmap__item {
+    &--little {
+      width: 19%;
+    }
+
+    &--medium {
+      width: 20%;
+    }
+
+    &--big {
+      width: 30.5%;
+
+      .roadmap__sublist-item {
+        padding-left: 21px;
+
+        &::before {
+          left: 12px;
+        }
+      }
+    }
   }
 }
 
@@ -161,7 +222,7 @@
 
   .roadmap__item {
     position: relative;
-    width: 290px;
+    width: 290px !important;
     min-height: 80px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -188,6 +249,24 @@
       width: 10px;
       background-color: transparent;
       border-right: 1px dotted #fbb41e;
+    }
+  }
+
+  .roadmap__list--start .roadmap__item {
+    &--medium {
+      width: 24%;
+    }
+  }
+
+  .roadmap__list--end .roadmap__item {
+    &--big {
+      .roadmap__sublist-item {
+        padding-left: 10px;
+
+        &::before {
+          left: 0;
+        }
+      }
     }
   }
 
