--- a/source/less/blocks/main/team.less
+++ b/source/less/blocks/main/team.less
@@ -65,17 +65,17 @@
   background-repeat: no-repeat;
   background-size: contain;
 
-  &::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: rgba(76, 76, 76, 0.54);
-  }
-
-  img {
-    filter: grayscale(100%);
-  }
+  //&::after {
+  //  content: "";
+  //  position: absolute;
+  //  width: 100%;
+  //  height: 100%;
+  //  background: rgba(76, 76, 76, 0.54);
+  //}
+  //
+  //img {
+  //  filter: grayscale(100%);
+  //}
 }
 
 .team__img-wrap--partners {
