new modal window / private-sale
small fix


one more small fix


second small fix

--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -40,6 +40,10 @@ h2 {
   line-height: 64px;
 }
 
+input, button {
+  outline: none;
+}
+
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
 input[type="radio"].visually-hidden {
