--- a/source/less/style.less
+++ b/source/less/style.less
@@ -14,5 +14,6 @@
 @import "blocks/main/team.less";
 @import "blocks/main/contacts.less";
 @import "blocks/footer/footer.less";
+@import "blocks/modal/modal";
 
 
