New small features.

--- a/source/less/blocks/main/mitoshi.less
+++ b/source/less/blocks/main/mitoshi.less
@@ -42,6 +42,7 @@
   transition: all 0.1s;
 
   &--transparent {
+    text-align: center;
     color: #4f4f4f;
     background: none;
     border: 1px solid #ffc700;
