--- a/less/blocks/header/header.less
+++ b/less/blocks/header/header.less
@@ -33,6 +33,8 @@
 }
 
 .header__button {
+  display: flex;
+  justify-content: center;
   font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
   padding: 10px;
