--- a/less/blocks/scaffolding.less
+++ b/less/blocks/scaffolding.less
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Rajdhani:400,700');
+@import url('https://fonts.googleapis.com/css?family=Rajdhani:400,500,700');
 
 html,
 body {
@@ -11,6 +11,7 @@ body {
   padding: 0;
   font-family: 'Rajdhani', 'Arial', sans-serif;
   font-size: 15px;
+  font-weight: 500;
   line-height: 22px;
   color: #4f4f4f;
   background-color: #ffffff;
