--- a/less/blocks/header/header.less
+++ b/less/blocks/header/header.less
@@ -32,18 +32,23 @@
   align-items: center;
 }
 
+.header__buttons-group {
+  display: flex;
+  margin: 0 -5px;
+}
+
 .header__button {
   display: flex;
   justify-content: center;
-  font-family: 'Rubik', 'Arial', sans-serif;
   box-sizing: border-box;
-  padding: 10px;
-  width: 144px;
+  margin: 0 5px;
+  padding: 7px;
+  width: 85px;
   line-height: 20px;
   color: #4f4f4f;
   background: #ffffff;
   border: 1px solid #ffc700;
-  border-radius: 100px;
+  border-radius: 80px;
   cursor: pointer;
 }
 
@@ -103,6 +108,10 @@
     &--active {
       right: 0;
     }
+  }
+
+  .header__buttons-group {
+    justify-content: center;
   }
 
   .header__button {
