--- a/less/blocks/main/about.less
+++ b/less/blocks/main/about.less
@@ -54,6 +54,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
+  margin-bottom: 50px;
   padding: 0;
   list-style: none;
 }
@@ -123,6 +124,80 @@
   }
 }
 
+.about__sale-title {
+  margin: 0;
+  margin-bottom: 15px;
+  font-size: 45px;
+  line-height: 52px;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: -0.02em;
+}
+
+.about__sale-status {
+  margin: 0;
+  margin-bottom: 12px;
+  background: linear-gradient(90deg,#ffc700 5.65%,#ffe13a 95.2%);
+  text-align: center;
+  letter-spacing: -0.03em;
+  border-radius: 50px;
+  padding: 8px 35px 6px;
+  font-size: 32px;
+  line-height: 1em;
+}
+
+.about__sale-hardcap {
+  font-size: 35px;
+  line-height: 1em;
+  font-weight: 700;
+  color: #606ac1;
+}
+
+.about__sale-list {
+  display: flex;
+  justify-content: space-around;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.about__sale-item {
+  display: flex;
+  align-items: center;
+  font-size: 25px;
+  line-height: 1em;
+  letter-spacing: -0.05em;
+
+  p {
+    margin: 0;
+  }
+}
+
+.about__sale-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.about__sale-eth,
+.about__sale-btc {
+  color: #C62100;
+}
+
+.about__join-link {
+  margin-left: 7px;
+  padding: 3px 12px;
+  font-size: 22px;
+  color: #ffffff;
+  background: linear-gradient(90deg, #FFC700 5.65%, #FFE13A 95.2%);
+  border-radius: 100px;
+  box-shadow: 0 0 20px #ffffff;
+  transition: all 0.1s;
+
+  &:hover {
+    box-shadow: 0 0 20px #ffc700;
+  }
+}
 
 @media (max-width: 991px) {
   .about__video-wrap {
@@ -130,7 +205,22 @@
     height: 195px;
     margin-right: 40px;
   }
+  .about__sale-title {
+    font-size: 35px;
+    line-height: 40px;
+  }
 
+  .about__sale-status {
+    font-size: 23px;
+  }
+
+  .about__sale-hardcap {
+    font-size: 27px;
+  }
+
+  .about__sale-item {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -159,6 +249,15 @@
     width: 26%;
     margin-bottom: 15px;
   }
+
+  .about__sale-list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .about__sale-item {
+    margin-bottom: 10px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -169,5 +268,14 @@
 
   .about__rating-item {
     width: 45%;
+  }
+
+  .about__sale-status {
+    padding: 8px 5px 6px;
+    font-size: 20px;
+  }
+
+  .about__sale-hardcap {
+    font-size: 23px;
   }
 }
