adding language dropdown

--- a/less/blocks/header/header.less
+++ b/less/blocks/header/header.less
@@ -77,6 +77,15 @@
   }
 }
 
+.header__language {
+  order: 3;
+
+  button {
+    width: 50px;
+    padding: 5px;
+  }
+}
+
 @media (max-width: 1199px) {
   .header {
     background-color: #ffffff;
@@ -116,5 +125,9 @@
 
   .header__button {
     align-self: center;
+  }
+
+  .header__language {
+    margin-right: 60px;
   }
 }
