--- a/less/blocks/scaffolding.less
+++ b/less/blocks/scaffolding.less
@@ -35,7 +35,6 @@ h2 {
   margin: 0;
   margin-bottom: 30px;
   margin-top: 30px;
-  font-family: 'Crimson Text', 'Times New Roman', serif;
   font-size: 50px;
   line-height: 64px;
 }
@@ -59,6 +58,43 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 100px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 10px 16px;
+  text-decoration: none;
+  display: block;
+  cursor: pointer;
+}
+
+.dropdown-content a:hover {
+  background-color: #e2e2e2;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: 'Rajdhani', 'Arial', sans-serif;
+}
 
 @media (max-width: 991px) {
   section {
