--- a/css/style.css
+++ b/css/style.css
@@ -249,6 +249,9 @@ select,
 textarea {
   font-family: 'Rajdhani', 'Arial', sans-serif;
 }
+.wrap {
+  width: 55%;
+}
 @media (max-width: 991px) {
   section {
     padding-top: 80px;
@@ -1277,13 +1280,12 @@ textarea {
   }
 }
 .solution {
-  background-image: url(../images/solution-bg.png);
-  background-repeat: no-repeat;
-  background-position: 100% 65%;
-  background-size: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 .solution__wrapper {
-  max-width: 490px;
+  width: 40%;
 }
 .solution__subtitle {
   margin: 0;
@@ -1299,6 +1301,7 @@ textarea {
   margin-bottom: 0;
 }
 .solution__button {
+  max-width: 250px;
   display: inline-block;
   margin-top: 30px;
   font-family: 'Rubik', 'Arial', sans-serif;
@@ -1316,7 +1319,96 @@ textarea {
 .solution__button:hover {
   box-shadow: 0 0 20px #ffc700;
 }
+.solution__video-wrapper {
+  width: 55%;
+  margin-top: 50px;
+}
+.solution__video {
+  position: relative;
+  width: 100%;
+  height: 0;
+  background-color: #000;
+  padding-top: 75%;
+}
+.solution__iframe {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+.solution__iframe-btn {
+  background: url(../images/solution-bg.png), #ffffff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  border: 0;
+  outline: none;
+  background-position: 50% 50%;
+  background-size: cover;
+  text-indent: -999em;
+  overflow: hidden;
+  opacity: 1;
+  transition: opacity 800ms, height 0s;
+}
+.solution__iframe-btn:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 80px;
+  height: 80px;
+  margin: -40px 0 0 -40px;
+  border: 5px solid #c5c5c5;
+  border-radius: 100%;
+  transition: border-color 300ms;
+}
+.solution__iframe-btn:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
+  margin: -20px 0 0 -10px;
+  border-left: 40px solid #c5c5c5;
+  border-top: 25px solid transparent;
+  border-bottom: 25px solid transparent;
+  transition: border-color 300ms;
+}
+.solution__iframe-btn:hover:before,
+.solution__iframe-btn:focus:before {
+  border-color: #ffff04;
+}
+.solution__iframe-btn:hover:after,
+.solution__iframe-btn:focus:after {
+  border-left-color: #ffff04;
+}
+.videoWrapperActive .solution__iframe-btn {
+  opacity: 0;
+  height: 0;
+  transition-delay: 0s, 800ms;
+}
 @media (max-width: 991px) {
+  .solution {
+    flex-direction: column;
+  }
+  .solution__wrapper {
+    width: 80%;
+    margin-bottom: 20px;
+  }
+  .solution__video-wrapper {
+    width: 70%;
+  }
   .solution__text {
     margin-bottom: 25px;
   }
@@ -1330,6 +1422,9 @@ textarea {
 @media (max-width: 767px) {
   .solution {
     background-image: none;
+  }
+  .solution__video-wrapper {
+    width: 90%;
   }
 }
 .how {
