--- a/less/blocks/scaffolding.less
+++ b/less/blocks/scaffolding.less
@@ -96,6 +96,11 @@ textarea {
   font-family: 'Rajdhani', 'Arial', sans-serif;
 }
 
+.wrap {
+  width: 55%;
+}
+
+
 @media (max-width: 991px) {
   section {
     padding-top: 80px;
