changing team section

--- a/less/blocks/main/team.less
+++ b/less/blocks/main/team.less
@@ -48,9 +48,9 @@
   align-items: center;
   text-align: center;
 
-  &--executive {
-    margin-right: 60px;
-  }
+  //&--executive {
+  //  margin-right: 60px;
+  //}
 }
 
 .team__img-wrap {
