--- a/less/blocks/main/team.less
+++ b/less/blocks/main/team.less
@@ -65,6 +65,10 @@
   background-repeat: no-repeat;
   background-size: contain;
 
+  picture {
+    display: flex;
+  }
+
   //&::after {
   //  content: "";
   //  position: absolute;
@@ -82,6 +86,12 @@
   justify-content: center;
   align-items: center;
   background-color: #000000;
+
+  picture {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .team__img-wrap--partners-shrink img {
