adding english & russian languages

--- a/less/blocks/header/header.less
+++ b/less/blocks/header/header.less
@@ -43,7 +43,7 @@
   box-sizing: border-box;
   margin: 0 5px;
   padding: 7px;
-  width: 85px;
+  min-width: 85px;
   line-height: 20px;
   color: #4f4f4f;
   background: #ffffff;
