--- a/less/blocks/main/team.less
+++ b/less/blocks/main/team.less
@@ -161,9 +161,9 @@
   .team__list-item {
     margin-bottom: 15px;
 
-    &--executive {
-      margin-right: 40px;
-    }
+    //&--executive {
+    //  margin-right: 40px;
+    //}
   }
 
   .team__img-wrap {
