--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ textarea {
   box-sizing: border-box;
   margin: 0 5px;
   padding: 7px;
-  width: 85px;
+  min-width: 85px;
   line-height: 20px;
   color: #4f4f4f;
   background: #ffffff;
@@ -459,12 +459,13 @@ textarea {
   display: flex;
   flex-wrap: wrap;
   margin: 0;
-  padding: 0;
+  padding: 15px 0;
   list-style: none;
   text-transform: capitalize;
 }
 .main-nav__item {
   margin-right: 22px;
+  text-align: center;
 }
 .main-nav__item:last-child {
   margin-right: 0;
@@ -502,6 +503,9 @@ textarea {
   .main-nav__item {
     margin-right: 0;
     border-bottom: 1px solid rgba(223, 223, 223, 0.28);
+  }
+  .main-nav__item br {
+    display: none;
   }
   .main-nav__link {
     display: block;
@@ -1295,7 +1299,7 @@ textarea {
   margin-bottom: 0;
 }
 .solution__button {
-  max-width: 250px;
+  max-width: 300px;
   display: inline-block;
   margin-top: 30px;
   box-sizing: border-box;
@@ -1308,6 +1312,7 @@ textarea {
   box-shadow: 0 0 20px #ffffff;
   cursor: pointer;
   transition: all 0.1s;
+  text-align: center;
 }
 .solution__button:hover {
   box-shadow: 0 0 20px #ffc700;
@@ -1859,9 +1864,6 @@ textarea {
   }
   .team__list-item {
     margin-bottom: 15px;
-  }
-  .team__list-item--executive {
-    margin-right: 40px;
   }
   .team__img-wrap {
     width: 100px;
