--- a/less/blocks/main/solution.less
+++ b/less/blocks/main/solution.less
@@ -33,7 +33,7 @@
 }
 
 .solution__button {
-  max-width: 250px;
+  max-width: 300px;
   display: inline-block;
   margin-top: 30px;
   box-sizing: border-box;
@@ -46,6 +46,7 @@
   box-shadow: 0 0 20px #ffffff;
   cursor: pointer;
   transition: all 0.1s;
+  text-align: center;
 
   &:hover {
     box-shadow: 0 0 20px #ffc700;
